@@ -1,3 +1,8 @@
+2006-09-09  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus.texi (Mail Source Specifiers): Mention problem of duplicate
+	mails with pop3-leave-mail-on-server.  Fix wording.
+
 2006-09-11  Simon Josefsson  <jas@extundo.com>
 
 	* smtpmail.texi (Authentication): Explain TLS and SSL better, based on
